...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="xy4-Nw-tnc"/>
                    <navigationItem key="navigationItem" title="Page 1 of 15" id="4ls-K3-4Eo"/>
                    <connections>
                        <outlet property="gPreventerInhalerColour" destination="ap7-Ig-mFX" id="juw-EO-jgj"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="Z3V-YB-2h3"/>
                    <navigationItem key="navigationItem" title="Page 2 of 15" id="A55-D9-dr8"/>
                    <connections>
                        <outlet property="gPuffsMorning" destination="hWO-r5-Av0" id="9dM-Di-eTW"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="43O-Q4-Hr5"/>
                    <navigationItem key="navigationItem" title="Page 3 of 15" id="U24-0t-Kxt"/>
                    <value key="contentSizeForViewInPopover" type="size" width="414" height="736"/>
                    <connections>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="sKJ-o6-nJg"/>
                    <navigationItem key="navigationItem" title="Page 4 of 15" id="Y2G-Uz-te2"/>
                    <connections>
                        <outlet property="gRelieverInhalerColour" destination="unQ-BT-gbd" id="oS3-CL-BUO"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="CGk-nF-0mj"/>
                    <navigationItem key="navigationItem" title="Page 5 of 15" id="e9D-RB-XdE"/>
                    <connections>
                        <outlet property="gPuffsReliever" destination="Zah-zK-rgT" id="C0C-Pl-02I"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="y6i-pl-t3y"/>
                    <navigationItem key="navigationItem" title="Page 6 of 15" id="hic-yM-kX1"/>
                    <connections>
                        <outlet property="gOtherMedicine" destination="fDr-Lf-4th" id="SvR-Q2-b5c"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="usF-c6-xdV"/>
                    <navigationItem key="navigationItem" title="Page 7 of 15" id="c36-Rg-XKi"/>
                    <connections>
                        <outlet property="yWeeklyRelieverUses" destination="VHg-Pj-WFS" id="iWg-e5-eFA"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="GLx-kK-L74"/>
                    <navigationItem key="navigationItem" title="Page 8 of 15" id="J1U-Cj-jax"/>
                    <connections>
                        <outlet property="yMinimumPeakFlow" destination="ptT-lB-QdF" id="oBF-95-Yg9"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="KtA-QW-ANw"/>
                    <navigationItem key="navigationItem" title="Page 9 of 15" id="efH-mq-zfu"/>
                    <connections>
                        <outlet property="yIncreasedPreventerDosage" destination="8k9-yP-dh5" id="tXD-fG-TED"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="Jf3-eq-GXo"/>
                    <navigationItem key="navigationItem" title="Page 10 of 15" id="wsp-CJ-91g"/>
                    <connections>
                        <outlet property="yIncreasedPreventerFrequency" destination="wuV-yP-3Cp" id="kLU-xS-Jmz"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="Z8m-lN-w8g"/>
                    <navigationItem key="navigationItem" title="Page 12 of 15" id="e1G-yV-osm"/>
                    <connections>
                        <outlet property="yTabletDosage" destination="tgo-9y-ePq" id="6IS-oE-1Ps"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="eCN-EV-ekn"/>
                    <navigationItem key="navigationItem" title="Page 13 of 15" id="pyy-wG-vpp"/>
                    <connections>
                        <outlet property="yTabletDuration" destination="n2l-fb-2rI" id="pN0-rL-kbP"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="rst-eJ-kdv"/>
                    <navigationItem key="navigationItem" title="Page 14 of 15" id="dWK-QA-4Bz"/>
                    <connections>
                        <outlet property="rRelieverFrequencyLimit" destination="bMg-bJ-CLn" id="PaY-7v-ekg"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="hNA-H4-KQI"/>
                    <navigationItem key="navigationItem" title="Page 15 of 15" id="6Mc-bQ-bKf"/>
                    <connections>
                        <outlet property="rMinimumPeakFlow" destination="vwK-gg-lql" id="y1a-X4-tUD"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="LCl-fM-WqB"/>
                    <navigationItem key="navigationItem" title="Page 11 of 15" id="bYP-yM-XfI"/>
                    <connections>
                        <outlet property="yIncreasedRelieverFrequency" destination="ez8-4P-yLa" id="BOa-xg-S7A"/>
...
